--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		]
 	},
 	"dependencies": {
+		"@sveltejs/adapter-vercel": "^5.7.2",
 		"aos": "3.0.0-beta.6",
 		"embla-carousel-autoplay": "^8.6.0",
 		"formsnap": "^2.0.1",
